--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
     <!-- footer-->
     <footer>
         <h2> &#128151; Made with love by Run Buddy.</h2>
+        <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2019 Run Buddy, Inc.
+        </div>
     </footer>
 </body>
 </html>
