--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 
     <!-- footer-->
     <footer>
-        <h2> &#128151; Made with love by Run Buddy.</h2>
+        <h2> &#10084;&#65039; Made with love by Run Buddy.</h2>
         <div>
-            <a href="#">Read Our Privacy Policy</a><br />
+            <a href="privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
