--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -459,7 +459,7 @@
             </article>
         </body>
         <footer>
-            <h2> &#128151; Made with love by Run Buddy.</h2>
+            <h2> &#10084;&#65039; Made with love by Run Buddy.</h2>
             <div>
                 <a href="#">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
