--- a/index.html
+++ b/index.html
@@ -201,39 +201,41 @@
             <h2 class="section-title secondary-border">Reach Out</h2>
         </div>
         <div class="contact-info">
-            <iframe 
-             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3439.0503194955377!2d-97.58457928470129!3d30.463012805632125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644c516cd1380bf%3A0xf221564b00653815!2s18928%20Canyon%20Sage%20Ln%2C%20Pflugerville%2C%20TX%2078660!5e0!3m2!1sen!2sus!4v1639606670504!5m2!1sen!2sus"
-             style="border:0;" 
-             allowfullscreen="" 
-             loading="lazy">
-            </iframe>
-            <div class="contact-form">
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+
+                <address>
+                    55 Main Street <br />
+                    Some Town, Ca <br />
+                    12345 <br />
+                    P: <a href="tel:555.786.2839">555.RUN.BUDZ (555.786.2839)</a><br />
+                    E: <a href="mailto://info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
+
+            <div class="Contact-form">
                 <h3>Contact Us</h3>
-                <form>
+                <form> 
                     <label for="contact-name">Your Name</label>
-                    <input type="text" id="contact-name"placeholder="Your Name" />
+                    <input type="text" id="contact-name" placeholder="Your Name" />
 
                     <label for="contact-message">Message</label>
                     <textarea id="contact-message" placeholder="Message"></textarea>
 
                     <button type="submit">Submit</button>
-                </form> 
+                </form>
             </div>
-            <div>
-               <h3>Run Buddy</h3>
-                <p> 
-                  Any questions or concerns before signing up?
-                  <br />
-                  Let us know and we'll be happy to talk to you!
-               </p>
-               <address> 
-                 55 Main Street <br />
-                 Some Town, Ca <br />
-                 12345<br />
-                 P: 555.RUN.BUDZ (555.786.2839)<br/>
-                 E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-               </address>
-            </div>
+
+            <iframe 
+             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3439.0503194955377!2d-97.58457928470129!3d30.463012805632125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644c516cd1380bf%3A0xf221564b00653815!2s18928%20Canyon%20Sage%20Ln%2C%20Pflugerville%2C%20TX%2078660!5e0!3m2!1sen!2sus!4v1639606670504!5m2!1sen!2sus"
+             style="border:0;" 
+             allowfullscreen=""></iframe>
+             
         </div>
     </section>
 
