corrected my CSS to make the button in contact us look correct and the spacing in the hero form look correct.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Run Buddy</title>
 
 </head>
@@ -48,7 +48,7 @@
             <p>Fill out this form and one of our trainers will schedule a consult</p>
         <!-- Add form element -->
         <form>
-            <label for="name">Enter full name:</label>
+            <label for="name">Your Name</label>
             <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
             <label for="email">Enter email address:</label>
             <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
@@ -56,9 +56,9 @@
             <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
             <p>
             Have you worked out with a trainer before?
-            <input type="radio" name="trainer-confirm" id="trainer-yes" />
+            <input type="radio" name="trainer-confirm" id="trainer-yes">
             <label for="trainer-yes">Yes</label>
-            <input type="radio" name="trainer-confirm" id="trainer-no" />
+            <input type="radio" name="trainer-confirm" id="trainer-no">
             <label for="trainer-no">No</label>
             </p>
             <p>
@@ -218,15 +218,13 @@
                 </address>
             </div>
 
-            <div class="Contact-form">
+            <div class="contact-form">
                 <h3>Contact Us</h3>
                 <form> 
                     <label for="contact-name">Your Name</label>
-                    <input type="text" id="contact-name" placeholder="Your Name" />
-
+                    <input type="text" id="contact-name" placeholder="Your Name" >
                     <label for="contact-message">Message</label>
                     <textarea id="contact-message" placeholder="Message"></textarea>
-
                     <button type="submit">Submit</button>
                 </form>
             </div>
