--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css"/>
     <link rel="stylesheet" type="text/css" href="assets/css/secondary-styles.css"/>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy - Run Buddy</title>
   </head>
   <body>
